--- a/Tweet_Classification.ipynb
+++ b/Tweet_Classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyODmJoHNoHRkolFIjTfdU6Q",
+      "authorship_tag": "ABX9TyNsgHZMmWuc9CTy7p8tLn1y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2152,9 +2152,17 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "**Evaluate models suitable for text classification using RNN Neural network**"
+      ],
+      "metadata": {
+        "id": "AzlTfBzMyFnA"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "# prompt: Evaluate models suitable for text classification using RNN Neural network\n",
         "\n",
         "import tensorflow as tf\n",
         "from tensorflow.keras.models import Sequential\n",
@@ -2204,7 +2212,7 @@
             "Epoch 1/10\n",
             "\u001b[1m153/153\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2077s\u001b[0m 14s/step - accuracy: 0.5697 - loss: 0.6855 - val_accuracy: 0.5616 - val_loss: 0.6859\n",
             "Epoch 2/10\n",
-            "\u001b[1m 26/153\u001b[0m \u001b[32m━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m29:20\u001b[0m 14s/step - accuracy: 0.5289 - loss: 0.6951"
+            "\u001b[1m 31/153\u001b[0m \u001b[32m━━━━\u001b[0m\u001b[37m━━━━━━━━━━━━━━━━\u001b[0m \u001b[1m28:42\u001b[0m 14s/step - accuracy: 0.5332 - loss: 0.6941"
           ]
         }
       ]
